--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         btn.style.top = '50%';
         btn.style.left = '50%';
         btn.style.transform = 'translate(-50%, -50%)';
-        btn.style.cursor = 'pointer';
+        btn.style.cursor = "pointer";
         btn.addEventListener('click', function () {
             location.reload();
         })
